--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.inostudio_task">
+    package="com.example.inostudioTask">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".FilmApplication"
+        android:name="com.example.inostudioTask.FilmApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Inostudio_task">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name="com.example.inostudioTask.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Inostudio_task.NoActionBar">
