--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,10 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
 
+
+
     implementation "io.coil-kt:coil-compose:1.4.0"
+
+    //Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
