--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,9 @@ dependencies {
 
     //Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    //Moshi
+    implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
+
 }
