--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Inostudio_task">
         <activity
-            android:name="com.example.inostudioTask.presentation.MainActivity"
+            android:name="com.example.inostudioTask.presentation.mainActivity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Inostudio_task.NoActionBar">
