--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,6 @@ dependencies {
     //Pages
     implementation "com.google.accompanist:accompanist-pager:0.19.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
+    //Splash
+    implementation "androidx.core:core-splashscreen:1.0.0-rc01"
 }
